e zum Slack_Clone hinzugefügt

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="toolbar-cont">
-  <button mat-icon-button>Slack_Clone</button>
+  <button mat-icon-button>Slack_Clonee</button>
   <div class="search-field">
     <input matInput placeholder="Search" />
   </div>
