--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,20 @@
 <div class="start-screen">
-
+    <img src="./assets/img/startscreen-image.png">
+    <div class="introduction">
+        <div class="introduction-header">
+            <img src="./assets/img/slack-big.svg">
+            <h1>Slack(clone)</h1>
+        </div>
+        <div class="introduction-body">
+            <p>Slack(clone) brings the them together wherever you are
+            </p>
+        </div>
+        <button class="sign-in-button" (click)="openLogIn()">
+            <p>Sign in</p>
+        </button>
+    </div>
+    <div class="start-screen-footer">
+        <p>Do you know the new Slack(clone)?</p>
+        <p (click)="openRegistryWindow()" class="cursor-pointer underline-registry">Create a new account</p>
+    </div>
 </div>
