--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,29 @@
-body{
-    margin:0;
-    left:0;
-    top:0;
-    width:100%;
-    min-height:100vh;
+body {
+    margin: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    min-height: 100vh;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.blurr {
+    filter: blur(10px);
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.fullWidth {
+    width: 100%;
+}
