--- a/src/app/dialog-login/dialog-login.component.scss
+++ b/src/app/dialog-login/dialog-login.component.scss
@@ -29,3 +29,11 @@
         }
     }
 }
+
+.guestLogIn {
+    position: absolute;
+    width: 120px;
+    bottom: 16px;
+    right: 16px;
+    background-color: rgba(0, 0, 0, 0.1);
+}
