--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -29,7 +29,7 @@
 
 .nav-cont {
     width: 100%;
-    min-height: calc(100vh - 32px);
+    height: calc(100vh - 46px);
 }
 
 .nav-content-cont {
@@ -72,5 +72,7 @@
 }
 
 .route-cont {
-    margin-top: 38px;
+    width: 100%;
+    height: calc(100vh - 46px);
+    background-color: red;
 }
