route channels fixed,logoutmenu, thread-array-bug-fixed

--- a/src/app/dialog-create-channel/dialog-create-channel.component.html
+++ b/src/app/dialog-create-channel/dialog-create-channel.component.html
@@ -1,3 +1,5 @@
+<div class="cont-dialog">
+
 <h2>Create Channel</h2>
 <p>
   Channels are for communication with your team. They should have a name, that
@@ -19,4 +21,5 @@
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
   <button mat-button (click)="saveChannel()" cdkFocusInitial>Save</button>
+</div>
 </div>
