--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,9 @@ body {
 .fullWidth {
     width: 100%;
 }
+
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
