--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -8,12 +8,27 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    h1{
+        margin:0;
+    }
+    button{
+        width: 34px;
+        height: 34px;
+        border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        
+    }
+        
     img {
         width: 30px;
         height: 30px;
         border-radius: 50%;
         border: solid 1px gray;
     }
+}
     .search-field {
         height: 20px;
         display: flex;
@@ -21,7 +36,7 @@
         align-items: center;
         background-color: white;
     }
-}
+
 
 .margin-top {
     padding-top: 24px;
