--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,13 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.mode-colors{
+    background-color: rgb(77, 2, 77);
+    color: white;
+}
+
+.mode-colors-nav{
+    color: white;
+    background-color: rgba(85, 2, 85, 0.961);
+}
