--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,8 +3,6 @@
     left: 0;
     height: 46px;
     width: 100%;
-    background-color: rgb(77, 2, 77);
-    color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -48,8 +46,6 @@
 }
 
 .nav-content-cont {
-    color: white;
-    background-color: rgb(77, 2, 77);
     width: 400px;
     padding-left: 12px;
     padding-right: 12px;
@@ -89,5 +85,22 @@
 .route-cont {
     width: 100%;
     height: calc(100vh - 46px);
-    background-color: red;
+    margin-top:46px;
 }
+
+.right{
+    right:0
+}
+
+
+.side-container{
+    background-color:red;
+    position: absolute;
+    right:0;
+    top:0;
+    height:100vh;
+}
+.side-nav-cont{
+    width:500px;
+}
+
