--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar class="toolbar-cont mode-colors">
-    <h1>Slack_Clone</h1>
-    <div class="search-field">
-        <input matInput placeholder="Search" />
-    </div>
+  <h1>Slack_Clone</h1>
+  <div class="search-field">
+    <input matInput placeholder="Search" />
+  </div>
 
-    <button mat-icon-button class="center"   [matMenuTriggerFor]="logoff">
+  <button mat-icon-button class="center" [matMenuTriggerFor]="logoff">
     <img src="assets/img/serious-woman.svg" />
   </button>
   <mat-menu #logoff="matMenu">
@@ -13,48 +13,46 @@
   </mat-menu>
 </mat-toolbar>
 <mat-drawer-container class="nav-cont" autosize>
-    <mat-drawer #drawer class="nav-content-cont mode-colors-nav" mode="side" [opened]="true">
-        <h2>
-            My Academy
-            <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+  <mat-drawer #drawer class="nav-content-cont mode-colors-nav" mode="side" [opened]="true">
+    <h2>
+      My Academy
+      <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
         <mat-icon>expand_more</mat-icon>
       </button>
-        </h2>
+    </h2>
 
-        <h3>
-            <button (click)="changeOpen()" mat-icon-button>
+    <h3>
+      <button (click)="changeOpen()" mat-icon-button>
         <mat-icon *ngIf="!open">arrow_right </mat-icon>
         <mat-icon *ngIf="open">arrow_drop_down</mat-icon>
       </button> Channels
-            <button mat-button [matMenuTriggerFor]="menu">
+      <button mat-button [matMenuTriggerFor]="menu">
         <mat-icon class="channel-create-icon">expand_more</mat-icon>
       </button>
-            <mat-menu #menu="matMenu">
-                <button mat-menu-item (click)="openDialogNewChannel()">
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="openDialogNewChannel()">
           Create new channel
         </button>
-            </mat-menu>
-        </h3>
-        <div *ngIf="open" class="channel-cont">
-            <h4 *ngFor="let chan of channels" routerLink="main/:id/channel/{{ chan.customIdName }}">
-                # {{ chan.name }}
-            </h4>
-        </div>
-    </mat-drawer>
+      </mat-menu>
+    </h3>
+    <div *ngIf="open" class="channel-cont">
+      <h4 *ngFor="let chan of channels" routerLink="main/:id/channel/{{ chan.customIdName }}">
+        # {{ chan.name }}
+      </h4>
+    </div>
+  </mat-drawer>
 
-    <div class="example-sidenav-content">
-        <!-- <button type="button" class="toggle-sidenav" mat-icon-button (click)="drawer.toggle()" mode="open">
+  <div class="example-sidenav-content">
+    <!-- <button type="button" class="toggle-sidenav" mat-icon-button (click)="drawer.toggle()" mode="open">
       <mat-icon>swap_horiz</mat-icon>
     </button>-->
     <div class="route-cont">
-
-            
-        <router-outlet ></router-outlet>
-    </div>
-   <div>
-       </div>
+      <router-outlet></router-outlet>
     </div>
 
-    <mat-drawer-container/>
+    <app-text-box class="app-text-container"></app-text-box>
 
-   
+
+  </div>
+
+  <mat-drawer-container />
