--- a/src/app/text-box/text-box.component.scss
+++ b/src/app/text-box/text-box.component.scss
@@ -2,4 +2,8 @@
     width: 100%;
     height: 300px;
     background-color: rgb(150, 150, 150);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
