styling und logik kommt übermorgen

--- a/src/app/text-box/text-box.component.html
+++ b/src/app/text-box/text-box.component.html
@@ -1,5 +1,5 @@
 <div class="text-box">
 
-    <quill-editor class="content-editor" [placeholder]="''"> </quill-editor>
+    <quill-editor class="content-editor" [placeholder]="'Nachricht an XXX'" [modules]="quillConfiguration" [styles]="{'min-height': '75px', 'max-height': '500px'}"> </quill-editor>
 
 </div>
