href deleted from anker answers

--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="answers">
       <img src="assets/img/pinguin.svg" alt="img of answer-user" />
-      <a href="" (click)="open(i)">Antworten</a>
+      <a  (click)="open(i)">Antworten</a>
       <span>Zeitraum zu letzter Antwort</span>
     </div>
   </div>
