--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -10,6 +10,7 @@
   h1 {
     margin: 0;
   }
+
   button {
     width: 34px;
     height: 34px;
@@ -26,6 +27,7 @@
     border: solid 1px gray;
   }
 }
+
 .search-field {
   height: 20px;
   display: flex;
@@ -47,6 +49,7 @@
   width: 400px;
   padding-left: 12px;
   padding-right: 12px;
+
   h2 {
     border-top: solid 1px rgb(130, 8, 130);
     border-bottom: solid 1px rgb(130, 8, 130);
@@ -57,6 +60,7 @@
     justify-content: flex-start;
     align-items: center;
   }
+
   h3 {
     margin-bottom: 0;
     padding-top: 10px;
@@ -64,24 +68,23 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+
     &:hover {
       .channel-create-icon {
         color: white;
       }
     }
+
     .channel-create-icon {
       color: transparent;
     }
   }
+
   .channel-cont {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 32px;
   }
-}
-
-.route-cont {
-  width: 100%;
 }
 
 .right {
@@ -106,6 +109,13 @@
   height: 100%;
 }
 
-.app-text-container {
+.route-cont {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.app-text-container {
+  width: inherit;
 }
