--- a/src/app/text-box/text-box.component.scss
+++ b/src/app/text-box/text-box.component.scss
@@ -1,6 +1,7 @@
-.text-box {
+.text-box-container {
     width: 100%;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(30, 30, 30);
+    color:#b7b8b9;
 
     display: flex;
     justify-content: center;
@@ -8,8 +9,44 @@
 }
 
 
-.content-editor {
+.editorForm {
     margin-block: 16px;
     width: 90%;
-
+    position: relative;
+    border-radius: 5px;
+    background-color: #222529 !important;
 }
+
+
+.content-editor {
+    width: 100%;
+}
+
+
+button {
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    background-color: #007a5a !important;
+    min-width: unset!important;
+    padding: 0 12px!important;
+
+    &:hover {
+        filter: brightness(1.2);
+    }
+
+    &:disabled {
+        background-color: unset;
+        cursor: not-allowed;
+    }
+
+    mat-icon {
+        color: #b7b8b9;
+        transition: all 75ms ease-in;
+    }
+}
+
+
