Kommentar zur style.css

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,7 @@ body {
 }
 
 
+// UNTERHALB TEXT BOX CSS (Muss in die style.css) //
 
 .ql-toolbar.ql-snow {
     border-top-left-radius: 5px !important;
@@ -91,3 +92,5 @@ body {
 .ql-editor {
     width: 93% !important;
 }
+
+// OBERHALB TEXT BOX CSS (Muss in die style.css) //
