--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -9,7 +9,7 @@
             <p>Slack(clone) brings the them together wherever you are
             </p>
         </div>
-        <button class="sign-in-button" (click)="openLogIn()">
+        <button class="sign-in-button" (click)="openLogInHomepage()">
             <p>Sign in</p>
         </button>
     </div>
