--- a/src/app/dialog-create-new-account/dialog-create-new-account.component.html
+++ b/src/app/dialog-create-new-account/dialog-create-new-account.component.html
@@ -4,19 +4,19 @@
     <div class="dialogUsername">
         <mat-form-field appearance="outline" class="fullWidth">
             <mat-label>Username</mat-label>
-            <input [disabled]="loading" matInput placeholder="Username....">
+            <input [disabled]="loading" matInput placeholder="Username...." [(ngModel)]="user.username">
         </mat-form-field>
     </div>
     <div class="dialogEmail">
         <mat-form-field appearance="outline" class="fullWidth">
             <mat-label>Email</mat-label>
-            <input [disabled]="loading" matInput placeholder="Email....">
+            <input [disabled]="loading" matInput placeholder="Email...." [(ngModel)]="user.email">
         </mat-form-field>
     </div>
     <div class="dialogPassword">
         <mat-form-field appearance="outline" class="fullWidth">
             <mat-label>Password</mat-label>
-            <input [disabled]="loading" [(ngModel)]="password" matInput name="password" [type]="showPassword ? 'text' : 'password'" placeholder="Enter password...">
+            <input [disabled]="loading" [(ngModel)]="password" [(ngModel)]="user.password" matInput name="password" [type]="showPassword ? 'text' : 'password'" placeholder="Enter password...">
             <span class="toggle-password" (click)="togglePassword()">
                 <img *ngIf="showPassword" src="./assets/img/hide.png">
                 <img *ngIf="!showPassword" src="./assets/img/view.png">
