--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,3 +94,9 @@ body {
 }
 
 // OBERHALB TEXT BOX CSS (Muss in die style.css) //
+
+.bottom{
+    position: absolute;
+    bottom:16px;
+    width:100%;
+}
