Textbox SCSS done

--- a/src/app/text-box/text-box.component.html
+++ b/src/app/text-box/text-box.component.html
@@ -2,7 +2,7 @@
 
     <form class="editorForm" (submit)="x()">
 
-        <quill-editor class="content-editor" [placeholder]="'Nachricht an XXX'" [modules]="quillConfiguration" [styles]="{'min-height': '80px', 'max-height': '500px'}">
+        <quill-editor class="content-editor" [placeholder]="'Nachricht an XXX'" [modules]="quillConfiguration">
 
         </quill-editor>
 
