--- a/src/app/dialog-login/dialog-login.component.scss
+++ b/src/app/dialog-login/dialog-login.component.scss
@@ -37,3 +37,30 @@
     right: 16px;
     background-color: rgba(0, 0, 0, 0.1);
 }
+
+.error {
+    background-color: red;
+    animation: shake 0.5s;
+}
+
+@keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        transform: translateX(-10px);
+    }
+    20%,
+    40%,
+    60%,
+    80% {
+        transform: translateX(10px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
