--- a/src/app/dialog-login/dialog-login.component.html
+++ b/src/app/dialog-login/dialog-login.component.html
@@ -3,14 +3,14 @@
     <mat-progress-bar *ngIf="loading" class="progressBar" mode="indeterminate"></mat-progress-bar>
     <div class="dialogEmail">
         <mat-form-field appearance="outline" class="fullWidth">
-            <mat-label>Email</mat-label>
-            <input [disabled]="loading" matInput placeholder="Email....">
+            <mat-label>Username</mat-label>
+            <input #usernameField [disabled]="loading" matInput placeholder="Username....">
         </mat-form-field>
     </div>
     <div class="dialogPassword">
         <mat-form-field appearance="outline" class="fullWidth">
             <mat-label>Password</mat-label>
-            <input [disabled]="loading" [(ngModel)]="password" matInput name="password" [type]="showPassword ? 'text' : 'password'" placeholder="Enter password...">
+            <input #passwordField [disabled]="loading" [(ngModel)]="password" matInput name="password" [type]="showPassword ? 'text' : 'password'" placeholder="Enter password...">
             <span class="toggle-password" (click)="togglePassword()">
                 <img *ngIf="showPassword" src="./assets/img/hide.png">
                 <img *ngIf="!showPassword" src="./assets/img/view.png">
@@ -20,7 +20,7 @@
 
     <div mat-dialog-actions>
         <button [disabled]="loading" mat-button (click)="closeWindow()">Cancel</button>
-        <button [disabled]="loading" mat-button (click)="logInUser()" cdkFocusInitial>Log in</button>
+        <button #loginButton [disabled]="loading" (click)="loginAnimation()" [class.error]="!logedin" mat-button cdkFocusInitial>Log in</button>
     </div>
     <button class="guestLogIn" [disabled]="loading" mat-button (click)="guestLogIn()" cdkFocusInitial>Guest log in</button>
 </div>
