--- a/src/app/dialog-login/dialog-login.component.scss
+++ b/src/app/dialog-login/dialog-login.component.scss
@@ -64,3 +64,16 @@
         transform: translateX(0);
     }
 }
+
+.errorLogin {
+    background: red;
+}
+
+.displayBlock {
+    display: flex;
+    justify-content: center;
+}
+
+.d-none {
+    display: none;
+}
